Fixed #176 Slider appears on mobile just below the footer

--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -72,20 +72,30 @@ General Styles - FlexSlider
 }
 
 .home-slider-overlay {
-    position: absolute;
-    background: rgba(0,0,0,1);
-    height: 100%;
-    width: 100%;
-    left: 0;
-    top: 0;
-    opacity: 0.3;
+	display: none;
 }
 
 #home .hero-slider {
 	width: 100%;
 	height: 100%;
-	position: fixed;
 }
+
+@media screen and (min-width: 768px) {
+	#home .hero-slider {
+		position: fixed;
+	}
+	.home-slider-overlay {
+		display: block;
+	    position: absolute;
+	    background: rgba(0,0,0,1);
+	    height: 100%;
+	    width: 100%;
+	    left: 0;
+	    top: 0;
+	    opacity: 0.3;
+	}
+}
+
 
 /* -------------------------------------------------------------------
 Hero Slider
